@@ -22,7 +22,7 @@
 #include "gretl_matrix_private.h"
 #include "system.h"
 
-#undef SDEBUG
+#define SDEBUG 0
 
 /* fiml.c */
 extern int fiml_driver (gretl_equation_system *sys, double ***pZ, 
@@ -140,6 +140,8 @@ gls_sigma_from_uhat (gretl_matrix *sigma, const gretl_matrix *e,
     return 0;
 }
 
+/* compute SUR or 3SLS parameter residuals */
+
 static void sys_resids (MODEL *pmod, const double **Z, gretl_matrix *uhat)
 {
     double yh;
@@ -162,6 +164,8 @@ static void sys_resids (MODEL *pmod, const double **Z, gretl_matrix *uhat)
     /* df correction could be applied here */
     pmod->sigma = sqrt(pmod->ess / pmod->nobs);
 }
+
+/* compute SUR or 3SLS parameter estimates */
 
 static int 
 calculate_sys_coefficients (MODEL **models, const double **Z,
@@ -291,12 +295,12 @@ system_model_list (gretl_equation_system *sys, int i, int *freeit)
 }
 
 static void
-print_fiml_overidentification_test (const gretl_equation_system *sys, 
-				    PRN *prn)
+print_system_overidentification_test (const gretl_equation_system *sys,
+				      int systype, PRN *prn)
 {
     int df = system_get_df(sys);
 
-    if (df > 0) {
+    if (systype == FIML && df > 0) {
 	double ll = system_get_ll(sys);
 	double llu = system_get_llu(sys);
 	double X2;
@@ -314,22 +318,136 @@ print_fiml_overidentification_test (const gretl_equation_system *sys,
 	pprintf(prn, "  %s(%d) = %g %s %g\n", _("Chi-square"),
 		df, X2, _("with p-value"), chisq(X2, df));
     }
+
+    else if ((systype == THREESLS || systype == SUR) && df > 0) {
+	double X2 = system_get_X2(sys);
+
+	if (na(X2) || X2 == 0.0) {
+	    return;
+	}
+
+	pprintf(prn, "\n%s:\n", _("Hansen-Sargan over-identification test"));
+	pprintf(prn, "  %s(%d) = %g %s %g\n", _("Chi-square"),
+		df, X2, _("with p-value"), chisq(X2, df));
+    }
 }
 
-static int three_stage_overid_test (gretl_equation_system *sys, 
-				    const gretl_matrix *sigma,
-				    const double **Z,
-				    int t1)
+#if SDEBUG
+
+/* longhand check on Hansen-Sargan test statistic: we don't
+   really need to burn this much memory or CPU cycles
+*/
+
+static int hs_check (gretl_equation_system *sys, 
+		     const gretl_matrix *sigma,
+		     double ***pZ, DATAINFO *pdinfo)
 {
     const int *exlist = system_get_instr_vars(sys);
-    const int *list;
+    const MODEL *pmod;
     int nx = exlist[0];
     int m = system_n_equations(sys);
     int T = system_n_obs(sys);
-    int df = nx * m;
+    int df = system_get_df(sys);
+    int oldv = pdinfo->v;
 
-    const MODEL *pmod;
-    const double *e, *Wi, *Wj;
+    MODEL hmod;
+    int *hlist;
+
+    double x, X2;
+    int i, j, t;
+    int err = 0;
+
+    hlist = malloc((nx + 2) * sizeof *hlist);
+    if (hlist == NULL) {
+	return 1;
+    }
+
+    /* on RHS: all the exog vars */
+    for (i=0; i<nx; i++) {
+	hlist[i+2] = exlist[i+1];
+    }
+
+    hlist[0] = nx + 1;
+
+    /* add space for resids series */
+    err = dataset_add_vars(2 * m, pZ, pdinfo);
+    if (err) {
+	fprintf(stderr, "Failed to expand dataset\n");
+	free(hlist);
+	return 1;
+    }
+
+    /* populate resids series */
+    for (i=0; i<m; i++) {
+	pmod = system_get_model(sys, i);
+	for (t=0; t<pdinfo->n; t++) {
+	    (*pZ)[oldv + i][t] = pmod->uhat[t];
+	}
+    }
+
+    /* run aux regressions, get fitted values */
+    for (i=0; i<m; i++) {
+	hlist[1] = oldv + i;
+	hmod = lsq(hlist, pZ, pdinfo, OLS, OPT_A, 0.0);
+	if (hmod.errcode) {
+	    fprintf(stderr, "hmod error!\n");
+	    clear_model(&hmod);
+	    err = 1;
+	    goto cleanup;
+	}
+	for (t=0; t<pdinfo->n; t++) {
+	    (*pZ)[oldv + m + i][t] = hmod.yhat[t];
+	}
+	clear_model(&hmod);
+    }
+
+    /* cumulate the Chi-square value */
+    X2 = 0.0;
+    for (i=0; i<m; i++) {
+	for (j=0; j<m; j++) {
+	    x = 0.0;
+	    for (t=0; t<T; t++) {
+		x += (*pZ)[oldv + i][t + pdinfo->t1] *
+		    (*pZ)[oldv + m + j][t + pdinfo->t1];
+	    }
+	    X2 += gretl_matrix_get(sigma, i, j) * x;
+	}
+    }
+
+    fprintf(stderr, "Hansen-Sargan, longhand version:\n"
+	    "  Chi-square(%d) = %g (p-value %g)\n", 
+	    df, X2, chisq(X2, df));
+
+ cleanup:
+
+    dataset_drop_vars(pdinfo->v - oldv, pZ, pdinfo);
+    free(hlist);
+
+    return err;
+}
+
+#endif /* SDEBUG */
+
+/* Hansen-Sargan overidentification test for the system as a whole,
+   as in Davidson and MacKinnon, ETM, p. 532 and equation (12.61).
+   See also D and M, Estimation and Inference in Econometrics,
+   equation (18.60) for a more computation-friendly statement of
+   the criterion function.
+*/
+
+static int hansen_sargan_test (gretl_equation_system *sys, 
+			       const gretl_matrix *sigma,
+			       const gretl_matrix *uhat,
+			       const double **Z,
+			       int t1)
+{
+    const int *exlist = system_get_instr_vars(sys);
+    int nx = exlist[0];
+    int m = system_n_equations(sys);
+    int T = system_n_obs(sys);
+    int df = system_get_df(sys);
+
+    const double *Wi, *Wj;
 
     gretl_matrix *WTW = NULL;
     gretl_matrix *eW = NULL;
@@ -338,11 +456,6 @@ static int three_stage_overid_test (gretl_equation_system *sys,
     double x, X2;
     int i, j, t;
     int err = 0;
-
-    for (i=0; i<m; i++) {
-	list = system_get_list(sys, i);
-	df -= list[0] - 1;
-    }
 
     if (df <= 0) return 1;
 
@@ -371,34 +484,22 @@ static int three_stage_overid_test (gretl_equation_system *sys,
 	}
     }
 
-#if SDEBUG
-    gretl_matrix_print(WTW, "WTW", NULL);
-#endif
-
     err = gretl_invert_symmetric_matrix(WTW);
     if (err) goto bailout;
 
-#if SDEBUG
-    gretl_matrix_print(WTW, "WTW-inv", NULL);
-#endif
-
-    /* set up vectors of 3SLS residuals times W */
+    /* set up vectors of 3SLS residuals, transposed, times W:
+       these are stacked in an m * nx matrix
+    */
     for (i=0; i<m; i++) {
-	pmod = system_get_model(sys, i);
-	e = pmod->uhat + t1;
 	for (j=0; j<nx; j++) {
 	    Wj = Z[exlist[j+1]] + t1;
 	    x = 0.0;
 	    for (t=0; t<T; t++) {
-		x += e[t] * Wj[t];
+		x += gretl_matrix_get(uhat, i, t) * Wj[t];
 	    }
 	    gretl_matrix_set(eW, i, j, x);
 	}
     }
-
-#if SDEBUG
-    gretl_matrix_print(eW, "eW", NULL);
-#endif
 
     /* multiply these vectors into (WTW)^{-1} */
     for (i=0; i<m; i++) {
@@ -411,10 +512,6 @@ static int three_stage_overid_test (gretl_equation_system *sys,
 	    gretl_matrix_set(tmp, i, j, x);
 	}
     }   
-
-#if SDEBUG
-    gretl_matrix_print(tmp, "tmp", NULL);
-#endif
 
     /* cumulate the Chi-square value */
     X2 = 0.0;
@@ -429,11 +526,11 @@ static int three_stage_overid_test (gretl_equation_system *sys,
 	}
     }
 
-    /* check this, and if it's OK, add to the printout in the right
-       place 
-    */
+#if SDEBUG
     fprintf(stderr, "Hansen-Sargan: Chi-square(%d) = %g (p-value %g)\n", 
 	    df, X2, chisq(X2, df));
+#endif
+    system_set_X2(sys, X2);
 
  bailout:
 
@@ -481,7 +578,7 @@ static int basic_system_allocate (int systype, int m, int T, int mk,
     if (*sigma == NULL) {
 	return E_ALLOC;
     }    
-    
+
     if (systype != LIML) {
 	*X = gretl_matrix_alloc(mk, mk);
 	if (*X == NULL) {
@@ -527,8 +624,8 @@ save_and_print_results (gretl_equation_system *sys, const gretl_matrix *sigma,
 
     if (!err) {
 	print_system_vcv(sigma, 1, prn);
-	if (systype == FIML) {
-	    print_fiml_overidentification_test(sys, prn);
+	if (systype == FIML || systype == THREESLS || systype == SUR) {
+	    print_system_overidentification_test(sys, systype, prn);
 	}
     }
 
@@ -725,12 +822,18 @@ int system_estimate (gretl_equation_system *sys, double ***pZ, DATAINFO *pdinfo,
     calculate_sys_coefficients(models, (const double **) *pZ, X, uhat, 
 			       y, m, mk);
 
-    if (systype == THREESLS) {
+    if (systype == THREESLS || systype == SUR) {
+	/* do this while we have sigma-inverse available */
+	hansen_sargan_test(sys, sigma, uhat, (const double **) *pZ, t1);
+#if SDEBUG 
+	/* try to verify the above result */
 	system_attach_models(sys, models);
-	three_stage_overid_test(sys, sigma, (const double **) *pZ, t1);
+	hs_check(sys, sigma, pZ, pdinfo);
 	system_unattach_models(sys);
+#endif
     }
 
+    /* refresh sigma (non-inverted) */
     gls_sigma_from_uhat(sigma, uhat, m, T);
 
     if (systype == FIML) {
