@@ -1,6 +1,10 @@
 version 1.3.1
 - Add FIML and LIML estimation to system command; also add 
   LR over-identification tests for these systems
+- Add Hansen-Sargan over-identification test for SUR and 3SLS
+  system estimates
+- Add "estimate" command for equation systems, and modify the
+  "system" command to allow the user to define named systems
 - Add univariate kernel density estimation (under the Variable
   menu in the gui program -- no script counterpart)
 - Purge the lesser-used model selection statistics, and use
@@ -18,6 +22,8 @@ version 1.3.1
   axes if only one is actually used
 - Fix for johansen cointegration test: don't crash if the user
   puts the const into the list of variables
+- Fix bug in forecasts with standard errors, for case of missing
+  observations
 
 11/15/2004 version 1.3.0
 - add "append" command, to append data to the current dataset,
